[PRMT-1526] Specified the charset to use rather than relying on defaults which can be a problem (feedback from spotbugs)